gitops/templates/triggers/eventlistener.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: github-listener-interceptor
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: github-listener-interceptor
spec:
  port:
    targetPort: 8080
  to:
    kind: "Service"
    name: el-github-listener-interceptor
    weight: 100
