gitops/templates/triggers/trigger-eventlistener-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: el-webhook
  namespace: 5b7aa5-tools
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: webhook
spec:
  port:
    targetPort: http-listener
  to:
    kind: "Service"
    name: el-webhook
    weight: 100
